# graphrag-msft

./: .gitattributes  AGENTS.md  README.md  verdict.md
agentic-graphrag-thesis/: AGENTS.md  pyproject.toml
agentic-graphrag-thesis/src/agentic_graphrag/: __init__.py
agentic-graphrag-thesis/thesis-paper/: README.md  intro.md  method.tex  references.bib  settings.tex  theory.tex  thesis.tex
agentic-graphrag-thesis/thesis-paper/figures/: agent_architecture.tikz  embeddings_cosine.tikz  hnsw_graph.tikz  hybrid_search.tikz  kg_ontology.tikz  rag_pipeline.tikz  semantic_chunking.tikz
