[project]
name = "agentic-graphrag-thesis"
version = "0.1.0"
description = "Agentic GraphRAG Thesis Project"
requires-python = ">=3.10,<3.13"
dependencies = [
    "graphrag",
    "pyautogen>=0.7.3",
    "langchain>=0.3.0",
]

[tool.uv.sources]
graphrag = { path = "..", editable = true }

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
